Hourly scheduled redeploy c04017eef2a2b97caefcefddaf3974dae0a373da

--- a/apps/govuk-content-schemas/running-frontend-against-examples.html
+++ b/apps/govuk-content-schemas/running-frontend-against-examples.html
@@ -364,15 +364,8 @@
 </div>
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        This document has not been updated for a while now. It may be out of date.
-      </strong>
-    </div>
 
-  Last updated: <a href="https://github.com/alphagov/govuk-content-store-examples/commit/26a204760a28c6f75f53c0bc2d7a8435b0ef398e">22 Nov 2017</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-content-store-examples/commit/80a3f1fafcb75d637d13362dd73aa883400002e3">7 May 2021</a>
 </div>
 
   <h1 class="page-title">govuk-content-store-examples: Running your frontend against the examples</h1>
@@ -382,7 +375,7 @@
 <p>It has the same API as the real <a href="https://github.com/alphagov/content-store">content-store</a> and can be used interchangably in your app. The only difference will be the content items available.</p>
 <p>Note: The dummy content store also has an index page which lists all the example content items available, you can find this at the root path: <code>/</code>.</p>
 <h2 id="using-the-heroku-version">Using the Heroku version</h2>
-<p>There is an instance of the dummy content store running on Heroku, which applications can use rather than running it locally. Whenever master changes, it will automatically be updated, and the available examples may change.</p>
+<p>There is an instance of the dummy content store running on Heroku, which applications can use rather than running it locally. Whenever main changes, it will automatically be updated, and the available examples may change.</p>
 <p><a href="https://govuk-content-store-examples.herokuapp.com/">govuk-content-store-examples.herokuapp.com</a></p>
 <p>To use the heroku version when running your application set <code>PLEK_SERVICE_CONTENT_STORE_URI</code> to point at Heroku, eg:</p>
 <pre><code>$ PLEK_SERVICE_CONTENT_STORE_URI=https://govuk-content-store-examples.herokuapp.com bundle exec rails s
