--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/284716.pt">Missão brasileira da área de subsea visita o Reino Unido</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/259217.pt">Britânicos visitam RS em busca de empreendedores e investidores</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-5th-uk-china-architecture-forum-held-in-guangzhou-on-4-july--2">The 5th UK-China Architecture Forum held in Guangzhou on 4 July</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/important-notice-for-uk-visa-customers-in-kazakhstan--2">Important notice for UK visa customers in Kazakhstan</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/foreign-secretary-statement-on-the-death-of-nelson-mandela">Foreign Secretary statement on the death of Nelson Mandela</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/252606.zh-tw">Chevening 英國政府獎學金開放申請</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/death-of-nelson-mandela">Death of Nelson Mandela</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/high-level-uk-ghana-partnership-to-boost-trade-and-jobs">High Level UK-Ghana partnership to boost trade and jobs</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-update--6">Turks and Caicos post Cabinet Update</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/fintech-week-2016-report-finds-britain-to-be-the-worlds-leading-fintech-centre">Fintech Week 2016: report finds Britain to be the world&rsquo;s leading FinTech centre</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-the-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--2">Human Rights Council: 17th Session of the Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/257368.es-419">Una Semana Británica en Antioquia, Colombia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expats-dont-lose-your-vote-in-the-european-parliament-elections--2">British expats: Don’t lose your vote in the European Parliament elections</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-consular-section-in-ankara-will-be-closed-next-week--2">Offices in Turkey will be closed due to Eid Holiday</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--40">Turks and Caicos Post Cabinet Meeting Statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/reduced-consular-services-at-british-embassy-ljubljana--2">Reduced consular services at British Embassy Ljubljana</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/297168.cs">Jaké reformě EU chce Británie napomoci?</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/220750.zh-tw">英國氣候變遷特別代表來台訪問</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/korea-celebrates-british-designers-and-artists-at-gwangju-biennale--2">Korea celebrates British designers and artists at Gwangju Biennale</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/mr-toji-president-of-the-kinan-international-exchange-association-honoured-by-the-queen">Mr Toji, President of the Kinan International Exchange Association, honoured by The Queen</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
