--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.renfrewshire.gov.uk" class="govuk-link">Renfrewshire Council</a></li>
-      <li><a href="http://www.dover.gov.uk" class="govuk-link">Dover District Council</a></li>
-      <li><a href="http://www.north-ayrshire.gov.uk" class="govuk-link">North Ayrshire Council</a></li>
-      <li><a href="http://www.broadland.gov.uk" class="govuk-link">Broadland District Council</a></li>
-      <li><a href="http://www.richmond.gov.uk/" class="govuk-link">London Borough of Richmond upon Thames Council</a></li>
-      <li><a href="https://www.malvernhills.gov.uk/" class="govuk-link">Malvern Hills District Council</a></li>
       <li><a href="http://www.bromley.gov.uk" class="govuk-link">London Borough of Bromley Council</a></li>
-      <li><a href="http://www.copelandbc.gov.uk/" class="govuk-link">Copeland Borough Council</a></li>
-      <li><a href="http://www.darlington.gov.uk" class="govuk-link">Darlington Borough Council</a></li>
-      <li><a href="http://www.bristol.gov.uk" class="govuk-link">Bristol City Council</a></li>
+      <li><a href="http://www.southsomerset.gov.uk" class="govuk-link">South Somerset District Council</a></li>
+      <li><a href="http://www.richmondshire.gov.uk" class="govuk-link">Richmondshire District Council</a></li>
+      <li><a href="http://www.castlereagh.gov.uk" class="govuk-link">Castlereagh Borough Council</a></li>
+      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
+      <li><a href="http://www.wandsworth.gov.uk/" class="govuk-link">London Borough of Wandsworth Council</a></li>
+      <li><a href="http://www.maldon.gov.uk" class="govuk-link">Maldon District Council</a></li>
+      <li><a href="http://www.parliament.uk/business/publications/hansard/" class="govuk-link">Hansard - UK Parliament</a></li>
+      <li><a href="http://www.iwight.com" class="govuk-link">Isle of Wight Council</a></li>
+      <li><a href="http://www.downdc.gov.uk" class="govuk-link">Down District Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
