--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -444,16 +444,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
-      <li><a href="http://www.lancashire.gov.uk/" class="govuk-link">Lancashire County Council</a></li>
-      <li><a href="http://www.nottinghamshire.gov.uk" class="govuk-link">Nottinghamshire County Council</a></li>
-      <li><a href="http://www.castlereagh.gov.uk" class="govuk-link">Castlereagh Borough Council</a></li>
+      <li><a href="https://www.lewes-eastbourne.gov.uk" class="govuk-link">Lewes District Council</a></li>
+      <li><a href="https://gov.wales/covid-19-alert-levels" class="govuk-link">Coronavirus (COVID-19) alert levels in Wales - GOV.WALES</a></li>
+      <li><a href="https://getintoteaching.education.gov.uk/" class="govuk-link">Get Into Teaching</a></li>
       <li><a href="https://www.nhs.uk/" class="govuk-link">NHS</a></li>
-      <li><a href="http://www.wyrebc.gov.uk/" class="govuk-link">Wyre Borough Council</a></li>
-      <li><a href="http://www.parliament.uk/business/publications/hansard/" class="govuk-link">Hansard - UK Parliament</a></li>
-      <li><a href="http://www.west-norfolk.gov.uk" class="govuk-link">King&rsquo;s Lynn and West Norfolk Borough Council</a></li>
-      <li><a href="http://www.maldon.gov.uk" class="govuk-link">Maldon District Council</a></li>
-      <li><a href="https://nationalcareersservice.direct.gov.uk/advice/getajob/cvs/" class="govuk-link">Write your CV - National Careers Service</a></li>
+      <li><a href="http://www.bromley.gov.uk" class="govuk-link">London Borough of Bromley Council</a></li>
+      <li><a href="https://www.malvernhills.gov.uk/" class="govuk-link">Malvern Hills District Council</a></li>
+      <li><a href="http://www.ryedale.gov.uk" class="govuk-link">Ryedale District Council</a></li>
+      <li><a href="http://www.havant.gov.uk" class="govuk-link">Havant Borough Council</a></li>
+      <li><a href="http://www.ballymena.gov.uk/" class="govuk-link">Ballymena Borough Council</a></li>
+      <li><a href="http://www.southtyneside.info/" class="govuk-link">South Tyneside Metropolitan Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
