--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: external_content</h1>
 
-  <p>There are <strong>533</strong> pages with document type
+  <p>There are <strong>532</strong> pages with document type
 &lsquo;external_content&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is not rendered by any apps. This could mean that the document
 type is not meant to be rendered (a redirect for example), or that there aren&rsquo;t
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.renfrewshire.gov.uk">Renfrewshire Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.dover.gov.uk">Dover District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.north-ayrshire.gov.uk">North Ayrshire Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.broadland.gov.uk">Broadland District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.richmond.gov.uk/">London Borough of Richmond upon Thames Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.malvernhills.gov.uk/">Malvern Hills District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.bromley.gov.uk">London Borough of Bromley Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.copelandbc.gov.uk/">Copeland Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.darlington.gov.uk">Darlington Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bristol.gov.uk">Bristol City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.southsomerset.gov.uk">South Somerset District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.richmondshire.gov.uk">Richmondshire District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.castlereagh.gov.uk">Castlereagh Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/weymouthandportland">Weymouth and Portland Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.wandsworth.gov.uk/">London Borough of Wandsworth Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.maldon.gov.uk">Maldon District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.parliament.uk/business/publications/hansard/">Hansard - UK Parliament</a></li>
+<li><a href="https://www.gov.ukhttp//www.iwight.com">Isle of Wight Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.downdc.gov.uk">Down District Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
