--- a/document-types/detailed_guide.html
+++ b/document-types/detailed_guide.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: detailed_guide</h1>
 
-  <p>There are <strong>7460</strong> pages with document type
+  <p>There are <strong>7462</strong> pages with document type
 &lsquo;detailed_guide&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -368,7 +368,7 @@
 <li><a href="https://www.gov.uk/guidance/transport-measures-to-protect-the-uk-from-variant-strains-of-covid-19">Coronavirus (COVID-19): red list travel ban countries</a></li>
 <li><a href="https://www.gov.uk/guidance/how-to-quarantine-when-you-arrive-in-england">How to quarantine when you arrive in England</a></li>
 <li><a href="https://www.gov.uk/guidance/coronavirus-covid-19-declaration-form-for-international-travel">Coronavirus (COVID-19): declaration form for international travel</a></li>
-<li><a href="https://www.gov.uk/guidance/travel-advice-novel-coronavirus">Travel advice: coronavirus (COVID-19)</a></li>
+<li><a href="https://www.gov.uk/guidance/travel-advice-novel-coronavirus">Travel abroad and coronavirus (COVID-19)</a></li>
 <li><a href="https://www.gov.uk/guidance/providers-of-day-2-and-day-8-coronavirus-testing-for-international-arrivals">Providers of day 2 and day 8 coronavirus testing for international arrivals</a></li>
 <li><a href="https://www.gov.uk/guidance/coronavirus-covid-19-testing-for-people-travelling-to-england">Coronavirus (COVID-19) testing before you travel to England</a></li>
 <li><a href="https://www.gov.uk/guidance/claim-for-wages-through-the-coronavirus-job-retention-scheme">Claim for wages through the Coronavirus Job Retention Scheme</a></li>
