--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/228522.es">David Muñoz y Simon Manley mano a mano en los fogones</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-mumbai--5">Advice for British nationals in Mumbai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/175441.lt">Paskelbtos pirmos Kompetencijų pusiausvyros peržiūros ataskaitos</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/279743.es">Gran Bretaña: 15 historias para 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/171850.es-419">G8: Oportunidades para todos, incluyendo Honduras</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--8">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/229395.zh-tw">海外申請英國護照的費用調降</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/247699.lt">Kartu esame stipresni: būtina stiprinti stabilumą pasaulyje</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/chevening-applications-top-tips">Chevening Applications: Top Tips</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--2">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-job-opportunity-at-the-british-embassy-buenos-aires--3">New job opportunity at the British Embassy Buenos Aires</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-uk-supports-the-kosovo-security-force-with-medical-training--2">The UK Supports the Kosovo Security Force with Medical Training</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/175818.es-419">Estrategia internacional del Reino Unido en materia educativa</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/264620.ja">英国ショッピングウィーク　2階建てロンドンバスがTHE NEW MINI 3 DOORと都内を走行</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/200799.fr">Accord avec EDF : un moment important pour nos deux pays</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-minister-impressed-with-sa-leg-of-bloodhound-education-project--2">British Minister impressed with SA leg of Bloodhound education project</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/172849.pt">UKTI busca brasileiros para participar de festival</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/important-notice-for-british-nationals-in-chennai--3">Important notice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/226260.ja">駐日英国大使館の歴史を振り返る写真展を開催</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/208807.es">Expositores británicos opinan sobre Smart Cities en Barcelona</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
