--- a/manual/cdn.html
+++ b/manual/cdn.html
@@ -218,7 +218,7 @@
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/9ba52660950982bbc0e38ae16ee524710e942a47">19 Apr 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/364178a831d6bbddeeb725a9f9dc0b095687f9f0">11 May 2021</a>
 </div>
 
  <h1 id='header'>Our content delivery network (CDN)</h1> <p>GOV.UK uses Fastly as a CDN. Public users aren&rsquo;t accessing GOV.UK servers directly, they connect via the CDN. This is better because:</p>
@@ -260,7 +260,7 @@
 &lt; X-Timer: &lt;time it took&gt;
 &lt; Vary: Accept-Encoding, Accept-Encoding
 </code></pre></div><p>See the Varnish/Fastly docs for what these mean. Check out the Fastly <a href="https://docs.fastly.com/guides/debugging/checking-cache#using-curl">debugging guide</a> for more details on testing.</p>
-<h2 id='access-controls-on-cache-clearing'>Access controls on cache clearing</h2><p>Our [Fastly Varnish config][vcl_config] restricts HTTP purges to specific IP addresses (otherwise anyone would be able to purge the cache).</p>
+<h2 id='access-controls-on-cache-clearing'>Access controls on cache clearing</h2><p>Our <a href="https://github.com/alphagov/govuk-cdn-config/">Fastly Varnish config</a> restricts HTTP purges to specific IP addresses (otherwise anyone would be able to purge the cache).</p>
 <h2 id='fastly39s-ip-ranges-and-our-access-controls-on-origin-servers'>Fastly&rsquo;s IP ranges and our access controls on origin servers</h2><p>Fastly publish their cache node <a href="https://api.fastly.com/public-ip-list">IP address ranges as JSON from their API</a>. We use these IP addresses in two places:</p>
 
 <ul>
