--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -360,15 +360,15 @@ actually any pages with this document type.</p>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
 <li><a href="https://www.gov.ukhttp//www.ballymena.gov.uk/">Ballymena Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bromley.gov.uk">London Borough of Bromley Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.reading.gov.uk/">Reading Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.lewes-eastbourne.gov.uk">Eastbourne Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.shetland.gov.uk">Shetland Islands Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hertsdirect.org/">Hertfordshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.richmondshire.gov.uk">Richmondshire District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.powys.gov.uk">Powys County Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.selby.gov.uk">Selby District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.richmondshire.gov.uk">Richmondshire District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bolton.gov.uk">Bolton Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.southsomerset.gov.uk">South Somerset District Council</a></li>
+<li><a href="https://www.gov.ukhttps//gov.wales/covid-19-alert-levels">Coronavirus (COVID-19) alert levels in Wales - GOV.WALES</a></li>
+<li><a href="https://www.gov.ukhttp//www.rother.gov.uk">Rother District Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.lewes-eastbourne.gov.uk">Lewes District Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/">Care homes - NHS</a></li>
+<li><a href="https://www.gov.ukhttp//www.lewes-eastbourne.gov.uk">Eastbourne Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
