Hourly scheduled redeploy ec5e0afaa3df4daefc2d1cebc8a34b4872d83486

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/indian-ocean-tsunami-10th-anniversary-prime-ministers-message">Indian Ocean tsunami 10th anniversary: Prime Minister&rsquo;s message</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-provides-english-classes-to-costa-rican-police-officers--2">British Embassy provides English classes to Costa Rican Police Officers</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/digital-diplomacy">Digital Diplomacy</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220494.es-419">Medirán emisiones de metano con muestras tomadas en Chacaltaya</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/294171.es-419">Ministro Británico de Estado para América Latina felicita al nuevo Vicepresidente de Guatemala</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/paris-saint-germain-v-chelsea-travel-advice--2">Paris Saint-Germain v Chelsea travel advice</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/human-rights-and-democracy-report-launch">Human Rights and Democracy Report launch</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-job-opportunity-at-the-british-embassy-buenos-aires--3">New job opportunity at the British Embassy Buenos Aires</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/271980.es-419">Resumen de la Visita Real del Príncipe de Gales y la Duquesa de Cornwall a México</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/boat-racing-festival-british-embassy-vientiane-closure--2">Boat Racing Festival - British Embassy Vientiane Closure</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/237972.es">José Ignacio Sánchez Galán, Presidente de Iberdrola,  miembro de la Orden del Imperio Británico</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/embassy-closure--3">Embassy closure</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/175727.es-419">Entrevista con el medallista olímpico venezolano Rubén Limardo</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/275931.es">Un día en la vida de Simon Manley</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/175313.es-419">Legado de los Juegos Olímpicos de Londres 2012</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/did-you-know-you-may-be-eligible-to-vote-in-the-eu-referendum--3">Did you know you may be eligible to vote in the EU Referendum?</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/272653.es-419">México recuerda el Día Internacional de la Eliminación de la Violencia contra la Mujer</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/thirtieth-session-of-the-human-rights-council-geneva-14-september-to-2-october-2015--4">Thirtieth Session of the Human Rights Council, Geneva, 14 September to 2 October 2015</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
