Hourly scheduled redeploy 3969bdb829eb1d18d6860be7468ec235b233ceee

--- a/manual/analytics.html
+++ b/manual/analytics.html
@@ -255,6 +255,7 @@ This is useful for testing what is being sent to GA and when. Other GA debuggers
           <h4>Learn</h4>
 
           <ul class="govuk-list">
+            <li><a href="/manual/find-a-rails-template-based-on-a-govuk-url.html">Find a rails template based on a GOV.UK URL or vice verca</a></li>
             <li><a href="/manual/frontend-architecture.html">Frontend architecture</a></li>
             <li><a href="/manual/local-frontend-development.html">Local frontend development</a></li>
             <li><a href="/manual/components.html">The component system</a></li>
