--- a/manual.html
+++ b/manual.html
@@ -545,6 +545,7 @@
     <h3>Learn</h3>
     <ul>
         <li><a href="/manual/analytics.html">Analytics on GOV.UK</a></li>
+        <li><a href="/manual/find-a-rails-template-based-on-a-govuk-url.html">Find a rails template based on a GOV.UK URL or vice verca</a></li>
         <li><a href="/manual/frontend-architecture.html">Frontend architecture</a></li>
         <li><a href="/manual/local-frontend-development.html">Local frontend development</a></li>
         <li><a href="/manual/components.html">The component system</a></li>
