--- a/manual/find-a-rails-template-based-on-a-govuk-url.html
+++ b/manual/find-a-rails-template-based-on-a-govuk-url.html
@@ -10,23 +10,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-    <title>Frontend architecture - GOV.UK Developer Documentation</title>
+    <title>Find a rails template based on a GOV.UK URL or vice verca - GOV.UK Developer Documentation</title>
 
     <link href="/stylesheets/manifest.css" rel="stylesheet" />
 
-    <link rel="canonical" href="https://docs.publishing.service.gov.uk/manual/frontend-architecture.html">
+    <link rel="canonical" href="https://docs.publishing.service.gov.uk/manual/find-a-rails-template-based-on-a-govuk-url.html">
 
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:domain" content="docs.publishing.service.gov.uk" />
       <meta name="twitter:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
-      <meta name="twitter:title" content="Frontend architecture - GOV.UK Developer Documentation" />
-      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/manual/frontend-architecture.html" />
+      <meta name="twitter:title" content="Find a rails template based on a GOV.UK URL or vice verca - GOV.UK Developer Documentation" />
+      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/manual/find-a-rails-template-based-on-a-govuk-url.html" />
 
       <meta property="og:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
       <meta property="og:site_name" content="GOV.UK Developer Documentation" />
-      <meta property="og:title" content="Frontend architecture" />
+      <meta property="og:title" content="Find a rails template based on a GOV.UK URL or vice verca" />
       <meta property="og:type" content="object" />
-      <meta property="og:url" content="https://docs.publishing.service.gov.uk/manual/frontend-architecture.html" />
+      <meta property="og:url" content="https://docs.publishing.service.gov.uk/manual/find-a-rails-template-based-on-a-govuk-url.html" />
 
     
   </head>
@@ -131,13 +131,16 @@
                   <a href='/manual.html' class="toc__back-link govuk-link">&lsaquo; Manual</a>
   <ul>
   <li>
-    <a href="#header"><span>Frontend architecture</span></a>
+    <a href="#header"><span>Find a rails template based on a GOV.UK URL or vice verca</span></a>
     <ul>
       <li>
-        <a href="#current-state"><span>Current state</span></a>
+        <a href="#option-1-use-the-gov-uk-browser-extension"><span>Option 1: Use the GOV.UK browser extension</span></a>
       </li>
       <li>
-        <a href="#long-term-vision"><span>Long term vision</span></a>
+        <a href="#option-2-check-the-routes-file-in-a-given-app"><span>Option 2: Check the routes file in a given app</span></a>
+      </li>
+      <li>
+        <a href="#option-3-use-kibana-to-find-a-controller-or-path"><span>Option 3: Use Kibana to find a controller or path</span></a>
       </li>
     </ul>
   </li>
@@ -189,61 +192,19 @@
 </div>
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
-    <div class="govuk-warning-text">
-      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-      <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
-        This document has not been updated for a while now. It may be out of date.
-      </strong>
-    </div>
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/f333a8600b2dc1d65320468aee2cd9327a5f1b7e">21 Aug 2020</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/f57cdef343201691c2baca15c7ccb024ec1320aa">12 May 2021</a>
 </div>
 
- <h1 id='header'>Frontend architecture</h1> <p>GOV.UK currently uses multiple systems to build frontends (HTML/CSS/JS).</p>
-<h2 id='current-state'>Current state</h2><p><a href="https://docs.google.com/drawings/d/e/2PACX-1vQX7w1JT5zboAhKv2jssLPrO39KiWj4SL3T7MfSdigGlS1bjGR6UT_AqKHBKbif0VuRivIPD70WfpCQ/pub?w=1208&amp;h=470" rel="noopener noreferrer"><img src="https://docs.google.com/drawings/d/e/2PACX-1vQX7w1JT5zboAhKv2jssLPrO39KiWj4SL3T7MfSdigGlS1bjGR6UT_AqKHBKbif0VuRivIPD70WfpCQ/pub?w=1208&amp;amp;h=470" alt="Current state of libraries" /></a></p>
-<p><em><a href="https://docs.google.com/drawings/d/1L7pqFrHB2IQCnr0w3ticqBuR4U12b8psZQanZTvF098/edit">Source</a></em></p>
-<p>Applications that serve pages for the public (everything on www.gov.uk) use:</p>
-
-<ul>
-<li><a href="https://github.com/alphagov/govuk_publishing_components">govuk_publishing_components</a>, the preferred way to share HTML, CSS and JS</li>
-<li><a href="https://github.com/alphagov/static">Static</a> and <a href="https://github.com/alphagov/slimmer">Slimmer</a> for layouts</li>
-<li>Static uses <a href="https://github.com/alphagov/govuk_frontend_toolkit">govuk_frontend_toolkit</a> and <a href="https://github.com/alphagov/govuk_template">govuk_template</a>, two deprecated projects built by GDS (not GOV.UK)</li>
-<li><a href="https://github.com/alphagov/licence-finder">licence-finder</a> is the only frontend application that still relies on <a href="https://github.com/alphagov/govuk_frontend_toolkit">govuk_frontend_toolkit</a></li>
-</ul>
-<p>Most admin applications use:</p>
-
-<ul>
-<li><a href="https://github.com/alphagov/govuk_admin_template">govuk_admin_template</a>, built by GOV.UK, which uses <a href="https://getbootstrap.com/">Bootstrap</a></li>
-</ul>
-<p>New admin applications and some legacy admin applications that have been updated use:</p>
-
-<ul>
-<li><a href="https://govuk-publishing-components.herokuapp.com/component-guide/layout_for_admin">layout_for_admin</a> which is available as a component in <a href="https://github.com/alphagov/govuk_publishing_components">govuk_publishing_components</a></li>
-</ul>
-<h2 id='long-term-vision'>Long term vision</h2><p>We have 2 <a href="https://docs.google.com/presentation/d/1q51pPWl4uaVM2PxFRmPUNu0wJvYfC-lO7GPLsRvyxtQ/edit">long term goals</a> for the frontend:</p>
-
-<ul>
-<li>Use the same tech for the public and admin apps</li>
-<li>Use as much of the <a href="https://design-system.service.gov.uk/">GOV.UK Design System</a> as possible</li>
-</ul>
-<p><a href="https://docs.google.com/drawings/d/e/2PACX-1vS5rtPYUJBvl2Th3JaT7WQQHu4KTDuYMdOiHCzUgyifG9ewuEyim_fC5VjmH8gjZg33o8E7TOcWn0sN/pub?w=873&amp;h=475" rel="noopener noreferrer"><img src="https://docs.google.com/drawings/d/e/2PACX-1vS5rtPYUJBvl2Th3JaT7WQQHu4KTDuYMdOiHCzUgyifG9ewuEyim_fC5VjmH8gjZg33o8E7TOcWn0sN/pub?w=873&amp;amp;h=475" alt="" /></a>
-<em><a href="https://docs.google.com/drawings/d/1R5s5lHyeDmPFfqXn17Lz3Z2MXoxhJcuSnnmdN327z9g/edit">Source</a></em></p>
-
-<ul>
-<li>Public and admin apps use <a href="https://github.com/alphagov/govuk_publishing_components">govuk_publishing_components</a></li>
-<li><a href="https://github.com/alphagov/govuk_publishing_components">govuk_publishing_components</a> consumes the <a href="https://design-system.service.gov.uk/">GOV.UK Design System</a></li>
-</ul>
+ <h1 id='header'>Find a rails template based on a GOV.UK URL or vice verca</h1> <p>When making changes to a template in one of our frontend apps it&rsquo;s often beneficial to see a rendered page with your change so that you can effectively test it. This can be difficult when developing within gov.uk as we have several frontend apps which control different parts of the site, sometimes overlapping in sections that they take responsibility for. This document details ways in which you can bypass this issue.</p>
+<h2 id='option-1-use-the-gov-uk-browser-extension'>Option 1: Use the GOV.UK browser extension</h2><p><a href="https://github.com/alphagov/govuk-browser-extension">The GOV.UK browser extension</a> provides a number of details on a given page on GOV.UK, including the app which renders that page. This can be a good start in working out which template renders a particular page, however doesn&rsquo;t help when ou are trying to find a URL based on static analysis of our frontend apps.</p>
+<h2 id='option-2-check-the-routes-file-in-a-given-app'>Option 2: Check the routes file in a given app</h2><p>As our frontend apps are all ruby on rails apps, it can be assumed that most views follow <a href="https://www.sitepoint.com/model-view-controller-mvc-architecture-rails/">the typical MVC flow</a> of a route being specified in <code>routes.rb</code>, this route calling a controller, that controller rendering a view and that view being located in <code>app/views</code> of a given application, identified in line with the name of the controller and the action within that controller. For example: a route could be specified that whenever the path <code>/government/organisations</code> is hit, it calls the <code>index</code> action of the <code>organisations</code> controller (shorthanded to <code>organisations#index</code>), this controller would then render at <code>app/views/organisations/index.html.erb</code>. You can follow this both path to template and template to path.</p>
+<p>A downside of this technique is that we allow publishers to set unique slugs for their content, which can&rsquo;t be easily interpreted via static analysis.</p>
+<h2 id='option-3-use-kibana-to-find-a-controller-or-path'>Option 3: Use Kibana to find a controller or path</h2><p>Kibana is an interface for traversing logs on GOV.UK and includes a lot of useful information, such which controller and which route a given path is rendered by. In order to access it you&rsquo;ll first need access to <a href="/manual/logit.html">logit</a> (specific instructions on how to successfully sign into logit can be found <a href="https://reliability-engineering.cloudapps.digital/logging.html#content">here</a>, ensure that you&rsquo;re part of the govuk gmail group before following these steps).</p>
+<p>You can find a lot of useful tips and instructions on using Kibana, including this particular use case, <a href="/manual/kibana.html">here</a>.</p>
 
 
   <div class='related-content'>
-    <h4>Related applications</h4>
-
-    <ul class="govuk-list">
-      <li><a href="/apps/static.html">static</a></li>
-      <li><a href="/apps/slimmer.html">slimmer</a></li>
-      <li><a href="/apps/govuk_publishing_components.html">govuk_publishing_components</a></li>
-    </ul>
 
     <h3>More in the Frontend section</h3>
 
@@ -253,7 +214,7 @@
 
           <ul class="govuk-list">
             <li><a href="/manual/analytics.html">Analytics on GOV.UK</a></li>
-            <li><a href="/manual/find-a-rails-template-based-on-a-govuk-url.html">Find a rails template based on a GOV.UK URL or vice verca</a></li>
+            <li><a href="/manual/frontend-architecture.html">Frontend architecture</a></li>
             <li><a href="/manual/local-frontend-development.html">Local frontend development</a></li>
             <li><a href="/manual/components.html">The component system</a></li>
             <li><a href="/manual/browser-support.html">Which browsers we support</a></li>
@@ -277,8 +238,8 @@
 
           <aside>
               <ul class="contribution-banner">
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/blob/master/source/manual/frontend-architecture.html.md">View source</a></li>
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20'Frontend%20architecture'&amp;body=Problem%20with%20'Frontend%20architecture'%20(https://docs.publishing.service.gov.uk/manual/frontend-architecture.html)">Report problem</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/blob/master/source/manual/find-a-rails-template-based-on-a-govuk-url.html.md">View source</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20'Find%20a%20rails%20template%20based%20on%20a%20GOV.UK%20URL%20or%20vice%20verca'&amp;body=Problem%20with%20'Find%20a%20rails%20template%20based%20on%20a%20GOV.UK%20URL%20or%20vice%20verca'%20(https://docs.publishing.service.gov.uk/manual/find-a-rails-template-based-on-a-govuk-url.html)">Report problem</a></li>
                 <li><a href="https://github.com/alphagov/govuk-developer-docs">GitHub Repo</a></li>
               </ul>
           </aside>
