--- a/manual/local-frontend-development.html
+++ b/manual/local-frontend-development.html
@@ -272,6 +272,7 @@ govuk-docker-up app-live
 
           <ul class="govuk-list">
             <li><a href="/manual/analytics.html">Analytics on GOV.UK</a></li>
+            <li><a href="/manual/find-a-rails-template-based-on-a-govuk-url.html">Find a rails template based on a GOV.UK URL or vice verca</a></li>
             <li><a href="/manual/frontend-architecture.html">Frontend architecture</a></li>
             <li><a href="/manual/components.html">The component system</a></li>
             <li><a href="/manual/browser-support.html">Which browsers we support</a></li>
